[package]
name = "cosm-vending-machine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-schema = "2.2"
cosmwasm-std = { version = "2.2", features = ["staking"] }
cw-storage-plus = "2.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
cw-multi-test = "2.2"
